--- a/index2.html
+++ b/index2.html
@@ -40,7 +40,7 @@
   <div id="label-container"></div>
 
   <script type="text/javascript">
-    const URL = "https://teachablemachine.withgoogle.com/models/q209uiBCa/";
+    const URL = "https://teachablemachine.withgoogle.com/models/q_R5O6_Qi/";
 
     let model, webcam, labelContainer, maxPredictions;
 
@@ -98,4 +98,5 @@
     }
   </script>
 </body>
+
 </html>
